code errors fixed.. image file location errors

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="row">
                     <div class="col-md-3">
                         <div class="card order-item" style="width: 18rem;">
-                            <img src="./images/download.jpg"
+                            <img src="download.jpg"
                                 class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Pepperoni Pizza</h5>
@@ -59,7 +59,7 @@
 
                     <div class="col-md-3">
                         <div class="card order-item" style="width: 18rem;">
-                            <img src="./images/mushroom.jpg"
+                            <img src="mushroom.jpg"
                                 class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Mushroom Pizza</h5>
@@ -73,7 +73,7 @@
 
                     <div class="col-md-3">
                         <div class="card order-item" style="width: 18rem;">
-                            <img src="./images/hawaiian-pizza.jpg"
+                            <img src="hawaiian-pizza.jpg"
                                 class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Hawaian Pizza</h5>
@@ -87,7 +87,7 @@
 
                     <div class="col-md-3">
                         <div class="card order-item" style="width: 18rem;">
-                            <img src="./images/pizza4.jpg"
+                            <img src="pizza4.jpg"
                                 class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Cloud Bread Pizza</h5>
